--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.16.2",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
+    "vuetify": "^0.16.6",
     "vuex": "^2.4.1",
     "vuex-router-sync": "^4.3.2"
   },
